# inih-beef

./: BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts
example/: BeefProj.toml
example/src/: Program.bf
libs/windows/: inih.lib  inihd.lib
libs/windows/x64/: inih.lib  inih_d.lib
src/: inih.bf
